--- a/Assets/Scripts/UserControlSystem/UI/Presenter/UIPresenter.asmdef
+++ b/Assets/Scripts/UserControlSystem/UI/Presenter/UIPresenter.asmdef
@@ -5,7 +5,9 @@
         "GUID:422e2835f7446f844b078b79f3e9ab28",
         "GUID:3c6ed42774b299e4cb88eb92c9d7f13c",
         "GUID:71a3651acb814af41a0eaee8cdcd9ba2",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:9828e72882cc28b439ad9301b0d09c64",
+        "GUID:7767ecdd57cd24942ba0a634457509de"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
