--- a/Assets/Scripts/UserControlSystem/UserControlSystem.asmdef
+++ b/Assets/Scripts/UserControlSystem/UserControlSystem.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:71a3651acb814af41a0eaee8cdcd9ba2",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:7767ecdd57cd24942ba0a634457509de"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
