--- a/Assets/Scripts/UserControlSystem/UI/Presenter/UIPresenter.asmdef
+++ b/Assets/Scripts/UserControlSystem/UI/Presenter/UIPresenter.asmdef
@@ -8,7 +8,8 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:9828e72882cc28b439ad9301b0d09c64",
         "GUID:7767ecdd57cd24942ba0a634457509de",
-        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
